fix: allow notification group to align to a specified container

--- a/packages/default/scss/notification/_layout.scss
+++ b/packages/default/scss/notification/_layout.scss
@@ -4,7 +4,7 @@
 
     // Base
     .k-notification-group {
-        position: fixed;
+        position: absolute;
         display: inline-flex;
         flex-wrap: wrap;
         max-height: 100%;
